Adding velocity.js for some animations.

--- a/_includes/footer-top.html
+++ b/_includes/footer-top.html
@@ -4,6 +4,7 @@
 - _assets/js/jquery.easing.min.js
 - _assets/js/pace.min.js
 - _assets/js/TweenMax.min.js
+- _assets/js/velocity.min.js
 - _assets/js/global.js
 {% endjavascript_asset_tag %}
     
